# object_detect

./: 1.vec  CMakeLists.txt  MatchTemplate.h  box_positive.vec  create_samples.sh  main.cpp  opencv_createsamples  opencv_createsamples.sh  opencv_traincascade  opencv_traincascade.sh  start_.sh
images/: .directory
